// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search in Dark Theme renders Default 1`] = `
<div
  className="w-full xl:mx-32"
>
  <div
    onKeyDown={[Function]}
  >
    <div
      className="relative w-full h-full bg-gohan flex flex-col divide-y dark:divide-beerus rounded-moon-s-sm"
    >
      <div
        className="flex items-center space-x-1.5 pl-3 moon-search-input"
      >
        <svg
          className="w-6 h-6 pointer-events-none text-bulma"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M24.647 25.354a.5.5 0 10.706-.708l-.706.708zm-9.685-2.93A7.462 7.462 0 017.5 14.96h-1a8.462 8.462 0 008.461 8.462v-1zM7.5 14.96c0-4.12 3.34-7.461 7.461-7.461v-1A8.462 8.462 0 006.5 14.961h1zM14.961 7.5c4.121 0 7.462 3.34 7.462 7.461h1A8.462 8.462 0 0014.962 6.5v1zm7.462 7.461a7.436 7.436 0 01-2.19 5.28l.707.708a8.437 8.437 0 002.483-5.988h-1zm-2.19 5.28a7.436 7.436 0 01-5.272 2.182v1a8.437 8.437 0 005.98-2.474l-.707-.708zm0 .708l4.414 4.405.706-.708-4.413-4.405-.706.708z"
            fill="currentColor"
          />
        </svg>
        <div
          className="flex-1 relative"
        >
          <input
            autoFocus={true}
            className="py-2 px-0 border-0 w-full focus:outline-none focus:border-0 focus:ring-0 bg-transparent placeholder-bulma text-bulma"
            id="moon-search-input"
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder="Search"
            spellCheck={false}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search in Dark Theme renders Modal 1`] = `
Array [
  <button
    aria-label="Search"
    className="flex h-10 cursor-text items-center justify-between rounded-moon-i-sm border border-beerus bg-gohan px-2 text-sm hover:border-trunks w-full focus:outline-none"
    onClick={[Function]}
  >
    <span
      className="flex gap-2 items-center text-moon-16 text-trunks"
    >
      <svg
        className="text-moon-24 text-bulma"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24.647 25.354a.5.5 0 10.706-.708l-.706.708zm-9.685-2.93A7.462 7.462 0 017.5 14.96h-1a8.462 8.462 0 008.461 8.462v-1zM7.5 14.96c0-4.12 3.34-7.461 7.461-7.461v-1A8.462 8.462 0 006.5 14.961h1zM14.961 7.5c4.121 0 7.462 3.34 7.462 7.461h1A8.462 8.462 0 0014.962 6.5v1zm7.462 7.461a7.436 7.436 0 01-2.19 5.28l.707.708a8.437 8.437 0 002.483-5.988h-1zm-2.19 5.28a7.436 7.436 0 01-5.272 2.182v1a8.437 8.437 0 005.98-2.474l-.707-.708zm0 .708l4.414 4.405.706-.708-4.413-4.405-.706.708z"
          fill="currentColor"
        />
      </svg>
      Search
    </span>
    <span
      className="inline-block whitespace-nowrap rounded px-1.5 align-middle font-medium leading-4 tracking-wide text-xs border border-beerus text-trunks"
    >
      ⌘K
    </span>
  </button>,
  <div
    onKeyDown={[Function]}
  />,
]
`;

exports[`Search in Light Theme renders Default 1`] = `
<div
  className="w-full xl:mx-32"
>
  <div
    onKeyDown={[Function]}
  >
    <div
      className="relative w-full h-full bg-gohan flex flex-col divide-y dark:divide-beerus rounded-moon-s-sm"
    >
      <div
        className="flex items-center space-x-1.5 pl-3 moon-search-input"
      >
        <svg
          className="w-6 h-6 pointer-events-none text-bulma"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M24.647 25.354a.5.5 0 10.706-.708l-.706.708zm-9.685-2.93A7.462 7.462 0 017.5 14.96h-1a8.462 8.462 0 008.461 8.462v-1zM7.5 14.96c0-4.12 3.34-7.461 7.461-7.461v-1A8.462 8.462 0 006.5 14.961h1zM14.961 7.5c4.121 0 7.462 3.34 7.462 7.461h1A8.462 8.462 0 0014.962 6.5v1zm7.462 7.461a7.436 7.436 0 01-2.19 5.28l.707.708a8.437 8.437 0 002.483-5.988h-1zm-2.19 5.28a7.436 7.436 0 01-5.272 2.182v1a8.437 8.437 0 005.98-2.474l-.707-.708zm0 .708l4.414 4.405.706-.708-4.413-4.405-.706.708z"
            fill="currentColor"
          />
        </svg>
        <div
          className="flex-1 relative"
        >
          <input
            autoFocus={true}
            className="py-2 px-0 border-0 w-full focus:outline-none focus:border-0 focus:ring-0 bg-transparent placeholder-bulma text-bulma"
            id="moon-search-input"
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder="Search"
            spellCheck={false}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search in Light Theme renders Modal 1`] = `
Array [
  <button
    aria-label="Search"
    className="flex h-10 cursor-text items-center justify-between rounded-moon-i-sm border border-beerus bg-gohan px-2 text-sm hover:border-trunks w-full focus:outline-none"
    onClick={[Function]}
  >
    <span
      className="flex gap-2 items-center text-moon-16 text-trunks"
    >
      <svg
        className="text-moon-24 text-bulma"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24.647 25.354a.5.5 0 10.706-.708l-.706.708zm-9.685-2.93A7.462 7.462 0 017.5 14.96h-1a8.462 8.462 0 008.461 8.462v-1zM7.5 14.96c0-4.12 3.34-7.461 7.461-7.461v-1A8.462 8.462 0 006.5 14.961h1zM14.961 7.5c4.121 0 7.462 3.34 7.462 7.461h1A8.462 8.462 0 0014.962 6.5v1zm7.462 7.461a7.436 7.436 0 01-2.19 5.28l.707.708a8.437 8.437 0 002.483-5.988h-1zm-2.19 5.28a7.436 7.436 0 01-5.272 2.182v1a8.437 8.437 0 005.98-2.474l-.707-.708zm0 .708l4.414 4.405.706-.708-4.413-4.405-.706.708z"
          fill="currentColor"
        />
      </svg>
      Search
    </span>
    <span
      className="inline-block whitespace-nowrap rounded px-1.5 align-middle font-medium leading-4 tracking-wide text-xs border border-beerus text-trunks"
    >
      ⌘K
    </span>
  </button>,
  <div
    onKeyDown={[Function]}
  />,
]
`;

exports[`Search in RTL renders Default 1`] = `
<div
  dir="rtl"
>
  <div
    className="w-full xl:mx-32"
  >
    <div
      onKeyDown={[Function]}
    >
      <div
        className="relative w-full h-full bg-gohan flex flex-col divide-y dark:divide-beerus rounded-moon-s-sm"
      >
        <div
          className="flex items-center space-x-1.5 pl-3 moon-search-input"
        >
          <svg
            className="w-6 h-6 pointer-events-none text-bulma"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24.647 25.354a.5.5 0 10.706-.708l-.706.708zm-9.685-2.93A7.462 7.462 0 017.5 14.96h-1a8.462 8.462 0 008.461 8.462v-1zM7.5 14.96c0-4.12 3.34-7.461 7.461-7.461v-1A8.462 8.462 0 006.5 14.961h1zM14.961 7.5c4.121 0 7.462 3.34 7.462 7.461h1A8.462 8.462 0 0014.962 6.5v1zm7.462 7.461a7.436 7.436 0 01-2.19 5.28l.707.708a8.437 8.437 0 002.483-5.988h-1zm-2.19 5.28a7.436 7.436 0 01-5.272 2.182v1a8.437 8.437 0 005.98-2.474l-.707-.708zm0 .708l4.414 4.405.706-.708-4.413-4.405-.706.708z"
              fill="currentColor"
            />
          </svg>
          <div
            className="flex-1 relative"
          >
            <input
              autoFocus={true}
              className="py-2 px-0 border-0 w-full focus:outline-none focus:border-0 focus:ring-0 bg-transparent placeholder-bulma text-bulma"
              id="moon-search-input"
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Search"
              spellCheck={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search in RTL renders Modal 1`] = `
<div
  dir="rtl"
>
  <button
    aria-label="Search"
    className="flex h-10 cursor-text items-center justify-between rounded-moon-i-sm border border-beerus bg-gohan px-2 text-sm hover:border-trunks w-full focus:outline-none"
    onClick={[Function]}
  >
    <span
      className="flex gap-2 items-center text-moon-16 text-trunks"
    >
      <svg
        className="text-moon-24 text-bulma"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24.647 25.354a.5.5 0 10.706-.708l-.706.708zm-9.685-2.93A7.462 7.462 0 017.5 14.96h-1a8.462 8.462 0 008.461 8.462v-1zM7.5 14.96c0-4.12 3.34-7.461 7.461-7.461v-1A8.462 8.462 0 006.5 14.961h1zM14.961 7.5c4.121 0 7.462 3.34 7.462 7.461h1A8.462 8.462 0 0014.962 6.5v1zm7.462 7.461a7.436 7.436 0 01-2.19 5.28l.707.708a8.437 8.437 0 002.483-5.988h-1zm-2.19 5.28a7.436 7.436 0 01-5.272 2.182v1a8.437 8.437 0 005.98-2.474l-.707-.708zm0 .708l4.414 4.405.706-.708-4.413-4.405-.706.708z"
          fill="currentColor"
        />
      </svg>
      Search
    </span>
    <span
      className="inline-block whitespace-nowrap rounded px-1.5 align-middle font-medium leading-4 tracking-wide text-xs border border-beerus text-trunks"
    >
      ⌘K
    </span>
  </button>
  <div
    onKeyDown={[Function]}
  />
</div>
`;
